--- a/about.html
+++ b/about.html
@@ -21,16 +21,17 @@
   </nav>
 </header>
 
-<!-- ABOUT HERO -->
+<!-- HERO -->
 <section class="page-hero">
-  <img class="page-hero-img" src="images/about-hero.jpg" alt="About hero">
+  <img class="page-hero-img" src="images/about-hero.png" alt="About hero">
   <div class="page-hero-overlay"></div>
   <div class="page-hero-copy">
     <p class="kicker">ABOUT</p>
     <h1 class="page-title">A Modern Brand Built on Detail</h1>
     <p class="page-sub">
-      Style & Trend is a contemporary fashion label based in Istanbul, blending clean silhouettes with street energy.
-      We focus on premium feel, wearable design, and long-term wardrobe value.
+      Style & Trend is a contemporary fashion label based in Istanbul. We blend clean silhouettes
+      with street energy—designed for daily wear, elevated with premium feel, and finished with
+      small details that make the difference.
     </p>
   </div>
 </section>
@@ -41,12 +42,18 @@
     <div>
       <h2 class="section-title">Our Story</h2>
       <p class="text">
-        Founded in 2026, Style & Trend started with one idea: make fashion look effortless and feel premium—without
-        turning it into something “too formal” or “too trendy”.
+        Style & Trend was founded in 2026 with one simple goal: create pieces that look effortless
+        and feel premium—without making fashion complicated. We wanted essentials that stay sharp,
+        layers that work across seasons, and silhouettes that feel current without being “too trendy”.
       </p>
       <p class="text">
-        We design pieces that work across your day: from casual essentials to refined layers and statement outerwear.
-        Our mood is minimal, our fit is modern, and our details are deliberate.
+        Our aesthetic is minimal and modern. Think clean colors, structured comfort, and wearable shapes
+        that fit your lifestyle—work, weekends, nights out. If you like a wardrobe that always looks “put together”,
+        you’re in the right place.
+      </p>
+      <p class="text">
+        We build collections in focused drops instead of overwhelming catalogs. That keeps the brand curated and
+        allows more attention to fit, fabric, stitching, and finishing. We’d rather do fewer pieces better.
       </p>
 
       <div class="stats">
@@ -66,7 +73,7 @@
     </div>
 
     <div class="img-card">
-      <img src="images/about-studio.jpg" alt="Studio">
+      <img src="images/about-studio.png" alt="Studio">
       <div class="img-card-cap">
         <span class="tag">STUDIO</span>
         <span class="cap">Minimal space, maximum focus.</span>
@@ -85,19 +92,19 @@
   <div class="card-grid">
     <div class="card">
       <h3>Quality First</h3>
-      <p>Better fabric, better stitching, better fit. We build pieces to be worn often and kept longer.</p>
+      <p>We focus on fabric, stitching, and durability—pieces you can wear often and keep longer.</p>
     </div>
     <div class="card">
       <h3>Clean Design</h3>
-      <p>Minimal palettes, strong silhouettes, and refined details—so your wardrobe stays timeless.</p>
+      <p>Minimal palettes, strong silhouettes, refined details. Timeless > trendy.</p>
     </div>
     <div class="card">
       <h3>Comfort + Shape</h3>
-      <p>Comfort isn’t optional. We balance structure and movement, so pieces feel as good as they look.</p>
+      <p>Comfort isn’t optional. We balance structure and movement so fits feel natural.</p>
     </div>
     <div class="card">
       <h3>Responsible Choices</h3>
-      <p>We aim for thoughtful sourcing and smarter production runs to reduce unnecessary waste.</p>
+      <p>We prefer controlled runs and thoughtful sourcing to reduce unnecessary waste.</p>
     </div>
   </div>
 </section>
@@ -114,28 +121,28 @@
       <div class="step-badge">01</div>
       <div>
         <h3>Direction</h3>
-        <p>We define a season mood: colors, fabrics, and silhouettes that fit the brand’s identity.</p>
+        <p>We define a season mood: colors, fabrics, shapes, and key pieces that fit our identity.</p>
       </div>
     </div>
     <div class="step">
       <div class="step-badge">02</div>
       <div>
         <h3>Sampling</h3>
-        <p>We create prototypes, check fit, refine seams, and adjust details until it feels right.</p>
+        <p>Prototype, test fit, refine seams, adjust details—repeat until it feels “right”.</p>
       </div>
     </div>
     <div class="step">
       <div class="step-badge">03</div>
       <div>
         <h3>Production</h3>
-        <p>We produce in controlled runs, focusing on consistent quality and finishing.</p>
+        <p>Controlled runs with consistent finishing and quality checks.</p>
       </div>
     </div>
     <div class="step">
       <div class="step-badge">04</div>
       <div>
         <h3>Drop</h3>
-        <p>We release focused selections. Less noise, more strong pieces.</p>
+        <p>Focused releases, curated selection—less noise, stronger wardrobe building.</p>
       </div>
     </div>
   </div>
@@ -145,7 +152,7 @@
 <section class="section soft">
   <div class="split">
     <div class="img-card">
-      <img src="images/about-atelier.jpg" alt="Atelier">
+      <img src="images/about-atelier.png" alt="Atelier">
       <div class="img-card-cap">
         <span class="tag">ATELIER</span>
         <span class="cap">Hands-on refinement.</span>
@@ -159,27 +166,27 @@
           <div class="tl-dot"></div>
           <div class="tl-content">
             <div class="tl-year">2026</div>
-            <div class="tl-text">Brand launch — core essentials and clean street layers.</div>
+            <div class="tl-text">Brand launch — essentials and clean street layers.</div>
           </div>
         </div>
         <div class="tl-item">
           <div class="tl-dot"></div>
           <div class="tl-content">
             <div class="tl-year">2027</div>
-            <div class="tl-text">Expanded fits + seasonal capsules (limited drops).</div>
+            <div class="tl-text">Season capsules + improved tailoring and fabric options.</div>
           </div>
         </div>
         <div class="tl-item">
           <div class="tl-dot"></div>
           <div class="tl-content">
             <div class="tl-year">Next</div>
-            <div class="tl-text">New fabrics, stronger tailoring, and improved sustainability.</div>
+            <div class="tl-text">More refined drops, stronger sustainability, expanded fits.</div>
           </div>
         </div>
       </div>
 
       <div class="mini-cta">
-        <p class="section-muted">Want to collaborate or ask about sourcing?</p>
+        <p class="section-muted">Collaboration or press?</p>
         <a class="btn btn-primary" href="contact.html">CONTACT US</a>
       </div>
     </div>
