--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
   </nav>
 </header>
 
-<!-- CONTACT HERO -->
+<!-- HERO -->
 <section class="page-hero compact">
-  <img class="page-hero-img" src="images/contact-hero.jpg" alt="Contact hero background">
+  <img class="page-hero-img" src="images/contact-hero.png" alt="Contact hero background">
   <div class="page-hero-overlay light"></div>
   <div class="page-hero-copy dark">
     <p class="kicker">CONTACT</p>
@@ -34,6 +34,7 @@
   </div>
 </section>
 
+<!-- CONTACT CARDS -->
 <section class="section">
   <div class="contact-grid">
     <div class="card">
