--- a/products.html
+++ b/products.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Products | Style & Trend</title>
-
-  <!-- CSS yolu doğru mu? style.css products.html ile aynı klasörde olmalı -->
   <link rel="stylesheet" href="style.css"/>
-
-  <!-- Fontlar (opsiyonel ama şık) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
@@ -25,16 +21,13 @@
   </nav>
 </header>
 
-<!-- PAGE HERO (küçük) -->
 <section class="page-hero compact">
   <img class="page-hero-img" src="images/campaign.jpg" alt="Products hero">
   <div class="page-hero-overlay"></div>
   <div class="page-hero-copy">
     <p class="kicker">SHOP</p>
     <h1 class="page-title">Our Collection</h1>
-    <p class="page-sub">
-      Clean silhouettes, premium feel, and focused drops.
-    </p>
+    <p class="page-sub">Clean silhouettes, premium feel, and focused drops.</p>
   </div>
 </section>
 
@@ -45,11 +38,8 @@
   </div>
 
   <div class="products-grid">
-
-    <!-- ÜRÜN 1 -->
     <div class="product-card">
       <div class="product-image">
-        <!-- ÖNEMLİ: Senin eski görsellerin urun1.jpg / urun2.jpg / urun3.jpg idi -->
         <img src="images/urun1.jpg" alt="Oversized T-Shirt">
       </div>
       <div class="product-info">
@@ -62,7 +52,6 @@
       </div>
     </div>
 
-    <!-- ÜRÜN 2 -->
     <div class="product-card">
       <div class="product-image">
         <img src="images/urun2.jpg" alt="Luxury Jacket">
@@ -77,7 +66,6 @@
       </div>
     </div>
 
-    <!-- ÜRÜN 3 -->
     <div class="product-card">
       <div class="product-image">
         <img src="images/urun3.jpg" alt="Premium Sneakers">
@@ -91,7 +79,6 @@
         <button class="btn btn-primary" onclick="addToCart('Premium Sneakers', 79.99)">Add to Cart</button>
       </div>
     </div>
-
   </div>
 </section>
 
